<resources>
    <string name="app_name">KFC Store</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="kfc_logo">kfc logo</string>
    <string name="back">back</string>
    <string name="delete">delete</string>
    <string name="item_name">Item Name</string>
    <string name="category">Category</string>
    <string name="quantity">Quantity</string>
    <string name="total_price">Total Price:</string>
    <string name="confirm">Confirm</string>
    <string name="reports">Reports</string>
    <string name="inventory">Inventory</string>
    <string name="edit">Edit</string>
    <string name="stock">Stock</string>
    <string name="price">Price</string>
    <string name="item">Item</string>
    <string name="add">add</string>
    <string name="show_all">Show all</string>
    <string name="order_reports">ORDER REPORTS</string>
    <string name="confirm_order">Confirm order</string>
    <string name="calculate">Calculate</string>
    <string name="change">Change</string>
    <string name="cash">Cash</string>
    <string name="total">Total</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="are_you_sure">Are you sure you want to remove this item from inventory?</string>
    <string name="del">Del</string>
    <string-array name="loginLevel">
        <item>EMPLOYEE</item>
        <item>MANAGER</item>
    </string-array>
</resources>