<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8D8D8"
    tools:context=".ui.Inventory">

    <RelativeLayout
        android:id="@+id/rl_Nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_border">

        <ImageButton
            android:id="@+id/btn_Back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:background="@drawable/menu_buttons"
            android:contentDescription="@string/back"
            android:padding="12dp"
            android:src="@drawable/arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/inventory"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <!--        <ImageButton-->
        <!--            android:id="@+id/btn_Add"-->
        <!--            android:layout_width="60dp"-->
        <!--            android:layout_height="60dp"-->
        <!--            android:layout_alignParentEnd="true"-->
        <!--            android:layout_gravity="center_vertical"-->
        <!--            android:background="@drawable/menu_buttons"-->
        <!--            android:contentDescription="@string/add"-->
        <!--            android:src="@drawable/add_cart" />-->

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/Linearlayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/rl_Nav"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/item"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/category"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/stock"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/edit"
            android:textColor="@color/black" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewInventory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/Linearlayout"
        android:layout_centerInParent="true" />

</RelativeLayout>