<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8D8D8"
    tools:context=".ui.Order">

    <RelativeLayout
        android:id="@+id/rl_Nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_border"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/btn_Back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/menu_buttons"
            android:contentDescription="@string/back"
            android:padding="12dp"
            android:src="@drawable/arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/order_summary"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/Linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_Nav"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/item"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/price"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/quantity"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/black" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_orderSummary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_Payment"
        android:layout_below="@id/Linearlayout"
        android:layout_centerInParent="true" />

    <RelativeLayout
        android:id="@+id/rl_Payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#D8FFFFFF"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_TotalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/tv_TotalValue"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/total_price"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_TotalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/total"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_TotalValue"
            android:layout_marginVertical="10dp">

            <EditText
                android:id="@+id/cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/change"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/cash"
                android:inputType="number"
                android:textColor="@color/black"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="5dp"
                android:layout_toStartOf="@+id/btn_Calc"
                android:gravity="center"
                android:text="@string/change"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_Calc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/button"
                android:text="@string/calculate"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_Payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/payment"
            android:layout_marginTop="5dp"
            android:background="@drawable/button"
            android:text="@string/confirm_order"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </RelativeLayout>

</RelativeLayout>