<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8D8D8"
    android:orientation="vertical"
    tools:context=".ui.Report">

    <RelativeLayout
        android:id="@+id/rl_Nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_border">

        <ImageButton
            android:id="@+id/btn_Back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:background="@drawable/menu_buttons"
            android:contentDescription="@string/back"
            android:padding="12dp"
            android:src="@drawable/arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/order_reports"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="5dp">

        <SearchView
            android:id="@+id/search_bar"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:iconifiedByDefault="false"
            android:queryHint="Search by date" />

        <Button
            android:id="@+id/btn_SeeAll"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:text="@string/show_all"
            android:textSize="15sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_orderReport"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>