<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="3dp"
    android:background="#80FFFFFF"
    android:padding="10dp">

    <TextView
        android:id="@+id/itemNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_weight="2"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/itemPriceTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_weight="2"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/itemPriceEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_weight="2"
        android:autofillHints=""
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="gone"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/itemCategoryTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_weight="2"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/itemQuantityTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="2"
        android:padding="15dp"
        android:paddingStart="50dp"
        android:paddingEnd="0dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/itemQuantityEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_weight="2"
        android:autofillHints=""
        android:imeOptions="actionDone"
        android:inputType="number"
        android:paddingEnd="0dp"
        android:paddingStart="50dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="gone"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btn_Cancel"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="@string/cancel"
        android:textSize="11sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_Edit"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="@string/edit"
        android:textSize="11sp" />

    <Button
        android:id="@+id/btn_Delete"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textSize="11sp" />

    <Button
        android:id="@+id/btn_OK"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="@string/ok"
        android:textSize="11sp"
        android:visibility="gone" />

</LinearLayout>
